<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.login.LoginActivity">

    <TextView
        style="@style/Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18pt" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login_account"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/text_username"
                android:paddingStart="16dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="8dp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/SemiBold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@android:color/white"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_register" />

                <TextView
                    android:id="@+id/txt_register"
                    style="@style/SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_register_acc"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--<TextView
        style="@style/SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_login_with"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/google"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:text="@string/text_google"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/facebook"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:text="@string/text_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_marginTop="16dp"
        android:text="Bantuan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_help_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>-->
</LinearLayout>