<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/write"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <TextView
                    style="@style/SemiBold"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daftarkan diri anda"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/text_name"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/text_email"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/text_class"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp" />

                <EditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/text_retype"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp" />

                <Button
                    android:id="@+id/btn_register"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/text_register_"
                    android:textColor="@android:color/white"
                    app:cornerRadius="5dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>